[gd_scene load_steps=29 format=3 uid="uid://wvugkwbfv52v"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_8jdx4"]
[ext_resource type="PackedScene" uid="uid://bk28id26hekey" path="res://scenes/board.tscn" id="2_mgmh3"]
[ext_resource type="PackedScene" uid="uid://14g0hlholgce" path="res://scenes/earth.tscn" id="4_ohwav"]
[ext_resource type="PackedScene" uid="uid://ds8b8obyr528b" path="res://scenes/player.tscn" id="5_qwgnx"]
[ext_resource type="PackedScene" uid="uid://biwgogegudjkv" path="res://scenes/air.tscn" id="5_vpuu6"]
[ext_resource type="PackedScene" uid="uid://oyrxsxg4v37x" path="res://scenes/fire.tscn" id="6_ey72t"]
[ext_resource type="PackedScene" uid="uid://cs051d3674ep1" path="res://scenes/water.tscn" id="7_74gfs"]
[ext_resource type="Shader" path="res://crt.gdshader" id="8_aiuua"]
[ext_resource type="PackedScene" uid="uid://cr4nirfyt0rd5" path="res://scenes/enemy.tscn" id="8_gdjaw"]
[ext_resource type="Texture2D" uid="uid://cgqkeb7imwnv8" path="res://sprites/air.png" id="9_rebbl"]
[ext_resource type="Texture2D" uid="uid://dfaochou0ng2r" path="res://sprites/fire.png" id="11_tethp"]
[ext_resource type="Script" path="res://scripts/floor_counter_label.gd" id="12_53vlk"]
[ext_resource type="Texture2D" uid="uid://6smsxwsoynjd" path="res://sprites/pentagram.png" id="13_mftw0"]
[ext_resource type="Script" path="res://scripts/summoners_slain_counter.gd" id="13_x5p4h"]
[ext_resource type="FontFile" uid="uid://bvtn8rirvrpmy" path="res://fonts/PixeloidSans-mLxMm.ttf" id="14_q67i5"]
[ext_resource type="Script" path="res://scripts/power_label.gd" id="15_h6rbw"]
[ext_resource type="PackedScene" uid="uid://de4o25ff2bavh" path="res://scenes/summon_skill.tscn" id="15_xpymv"]
[ext_resource type="Texture2D" uid="uid://dubtr7cr27ll4" path="res://sprites/earth.png" id="16_267s4"]
[ext_resource type="PackedScene" uid="uid://b0h0x65oihlnc" path="res://scenes/menu.tscn" id="17_dbf2e"]
[ext_resource type="Texture2D" uid="uid://jgsy0j1dbukg" path="res://sprites/water.png" id="17_gcmbl"]
[ext_resource type="PackedScene" uid="uid://dc83efbcibt7h" path="res://scenes/game_over.tscn" id="18_djjr1"]
[ext_resource type="AudioStream" uid="uid://ba23byaj7asrj" path="res://audio/background.mp3" id="22_n0r51"]
[ext_resource type="AudioStream" uid="uid://ctkn16arj8dau" path="res://audio/scream.mp3" id="23_8o77k"]

[sub_resource type="Environment" id="Environment_65fvt"]
background_mode = 3
glow_blend_mode = 1
glow_hdr_scale = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_skyq8"]
font = ExtResource("14_q67i5")
font_size = 9

[sub_resource type="LabelSettings" id="LabelSettings_kwwvx"]
font = ExtResource("14_q67i5")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_08e4m"]
font = ExtResource("14_q67i5")
font_size = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lljch"]
shader = ExtResource("8_aiuua")
shader_parameter/distortion_amount = 1.05
shader_parameter/brightness = 1.0
shader_parameter/contrast = 1.0
shader_parameter/scanline_intensity = 2.08165e-12
shader_parameter/noise_intensity = 0.001
shader_parameter/vignette_strength = 0.1
shader_parameter/color_tint = Vector3(1, 1, 1)
shader_parameter/scanline_frequency = 3.5

[node name="Main" type="Node2D"]
position = Vector2(211, 130)
script = ExtResource("1_8jdx4")

[node name="Board" parent="." instance=ExtResource("2_mgmh3")]
texture_filter = 1
position = Vector2(69, -26)
cell_size = 32
grid_height = 8
grid_width = 8
fire_scene = ExtResource("6_ey72t")
water_scene = ExtResource("7_74gfs")
earth_scene = ExtResource("4_ohwav")
air_scene = ExtResource("5_vpuu6")
player_scene = ExtResource("5_qwgnx")
enemy_scene = ExtResource("8_gdjaw")
fire_color = Color(0.729412, 0.380392, 0.337255, 1)
water_color = Color(0.392157, 0.462745, 0.909804, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_65fvt")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Play" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 264.0
offset_top = 361.0
offset_right = 360.0
offset_bottom = 374.0
text = "SUMMON POWER:"
label_settings = SubResource("LabelSettings_skyq8")
vertical_alignment = 1

[node name="PowerLabel" type="Label" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 363.0
offset_top = 362.0
offset_right = 390.0
offset_bottom = 375.0
text = "0/0"
label_settings = SubResource("LabelSettings_skyq8")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("15_h6rbw")

[node name="TextureRect3" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 353.0
offset_top = 362.0
offset_right = 365.0
offset_bottom = 374.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 264.0
offset_top = 376.0
offset_right = 280.0
offset_bottom = 392.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 283.0
offset_top = 376.0
offset_right = 299.0
offset_bottom = 392.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 302.0
offset_top = 376.0
offset_right = 318.0
offset_bottom = 392.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 320.0
offset_top = 376.0
offset_right = 336.0
offset_bottom = 392.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="TextureRect9" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 337.0
offset_top = 376.0
offset_right = 353.0
offset_bottom = 392.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="Label3" type="Label" parent="UI/Play"]
texture_filter = 1
layout_mode = 0
offset_left = 264.0
offset_top = 360.0
offset_right = 360.0
offset_bottom = 373.0
text = "FLOOR:"
label_settings = SubResource("LabelSettings_skyq8")
vertical_alignment = 1

[node name="FloorCounterLabel" type="Label" parent="UI/Play"]
texture_filter = 1
layout_mode = 0
offset_left = 376.0
offset_top = 360.0
offset_right = 389.0
offset_bottom = 373.0
text = "1"
label_settings = SubResource("LabelSettings_skyq8")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_53vlk")

[node name="Label4" type="Label" parent="UI/Play"]
texture_filter = 1
layout_mode = 0
offset_left = 264.0
offset_top = 376.0
offset_right = 360.0
offset_bottom = 389.0
text = "SUMMONERS SLAIN:"
label_settings = SubResource("LabelSettings_skyq8")
vertical_alignment = 1

[node name="SummonersSlainCounter" type="Label" parent="UI/Play"]
texture_filter = 1
layout_mode = 0
offset_left = 376.0
offset_top = 376.0
offset_right = 389.0
offset_bottom = 389.0
text = "0"
label_settings = SubResource("LabelSettings_skyq8")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("13_x5p4h")

[node name="Label5" type="Label" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 264.0
offset_top = 68.0
offset_right = 360.0
offset_bottom = 81.0
text = "BEST:"
label_settings = SubResource("LabelSettings_skyq8")
vertical_alignment = 1

[node name="Label6" type="Label" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 371.0
offset_top = 68.0
offset_right = 384.0
offset_bottom = 81.0
text = "1"
label_settings = SubResource("LabelSettings_skyq8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="UI/Play"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 360.0
offset_top = 377.0
offset_right = 372.0
offset_bottom = 389.0
texture = ExtResource("13_mftw0")
expand_mode = 1

[node name="VBoxContainer" type="HBoxContainer" parent="UI/Play"]
layout_mode = 0
offset_left = 392.0
offset_top = 356.0
offset_right = 532.0
offset_bottom = 392.0
theme_override_constants/separation = 0

[node name="AirSkill" parent="UI/Play/VBoxContainer" instance=ExtResource("15_xpymv")]
layout_mode = 2
button_mask = 5
key_text = "1"
cost_text = "1"
icon = ExtResource("9_rebbl")
base_color = Color(1, 1, 1, 1)
select_color = Color(1, 0.894118, 0.470588, 1)
skill_type = 4

[node name="EarthSkill" parent="UI/Play/VBoxContainer" instance=ExtResource("15_xpymv")]
layout_mode = 2
button_mask = 5
key_text = "2"
cost_text = "1"
icon = ExtResource("16_267s4")
base_color = Color(0.835294, 0.835294, 0.835294, 1)
select_color = Color(0.376471, 0.376471, 0.439216, 1)
skill_type = 3

[node name="WaterSkill" parent="UI/Play/VBoxContainer" instance=ExtResource("15_xpymv")]
layout_mode = 2
button_mask = 5
key_text = "3"
cost_text = "2"
icon = ExtResource("17_gcmbl")
base_color = Color(0.835294, 0.835294, 0.835294, 1)
select_color = Color(0.392157, 0.462745, 0.909804, 1)
skill_type = 2

[node name="FireSkill" parent="UI/Play/VBoxContainer" instance=ExtResource("15_xpymv")]
layout_mode = 2
button_mask = 5
key_text = "4"
cost_text = "3"
icon = ExtResource("11_tethp")
base_color = Color(0.835294, 0.835294, 0.835294, 1)
select_color = Color(0.729412, 0.380392, 0.337255, 1)
skill_type = 1

[node name="Label2" type="Label" parent="UI/Play"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 88.0
offset_right = 227.0
offset_bottom = 357.0
text = "CONTROLS

MOVE:
LEFT CLICK

SUMMON ELEMENT:
RIGHT CLICK:

CHOOSE ELEMENT:
MOUSE WHEEL
OR
KEYS 1 - 4
OR
Q AND E

RESET:
R"
label_settings = SubResource("LabelSettings_kwwvx")

[node name="FloorClearedLabel" type="Label" parent="UI/Play"]
visible = false
layout_mode = 0
offset_left = 296.0
offset_top = 200.0
offset_right = 488.0
offset_bottom = 225.0
pivot_offset = Vector2(96, 16)
text = "FLOOR 1 CLEARED!"
label_settings = SubResource("LabelSettings_08e4m")

[node name="Menu" parent="UI" instance=ExtResource("17_dbf2e")]
visible = false

[node name="GameOver" parent="UI" instance=ExtResource("18_djjr1")]
visible = false

[node name="CRT" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_lljch")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_n0r51")
autoplay = true

[node name="EnemySlainAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_8o77k")
